# sense

./: .gitignore  README.md  deps.toml  package.json
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/sense/: sense_buttons.h  sense_input.h  sense_input_manager.h  sense_keyboard_keys.h  sense_touches.h
src/lib/: CMakeLists.txt  sense_input_manager.c  touches.c
src/platform/glfw/: glfw_input_driver.c  glfw_input_manager.c  glfw_input_manager.h  glfw_keyboard.c  glfw_keyboard.h
src/platform/ios/: ios_input_driver.c  ios_input_gamepad_manager.m  ios_input_manager.c  ios_input_manager.h
src/platform/sdl/: sdl_input_driver.c  sdl_input_driver.h  sdl_input_manager.c  sdl_input_manager.h  sdl_keyboard.c  sdl_keyboard.h
src/platform/steam/: stik_input_driver.c  stik_input_manager.c
src/platform/webassembly/: webassembly_gamepad.c  webassembly_gamepad.h  webassembly_input_driver.c  webassembly_input_manager.c  webassembly_input_manager.h  webassembly_keyboard.c  webassembly_keyboard.h  webassembly_touches.c  webassembly_touches.h
src/platform/xinput/: xinput_driver.c  xinput_manager.c  xinput_manager.h
